--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -665,6 +665,7 @@ checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 saveDialog.FileExist.title=Warning
 # Dialog message
 saveDialog.FileExist.message=File already exists. Would you like to overwrite it?
+saveDialog.dangerousLocation.message=<html><b>Warning !</b><br>You are about to save your account data in the Yapbam installation directory.<br><br><b>Your data will probably be erased</b> during next Yapbam update.<br>We strongly recommend you to save your data elsewhere.<br><br>You can continue, at your own risk.</html>
 
 # Menu item to set a password to protect the data
 MainMenu.Protect=Password protection...
@@ -692,6 +693,10 @@ StatementView.notChecked=Not checked
 StatementView.startBalance=Balance at the beginning of the period: {0}
 StatementView.endBalance=Balance at the end of the period: {0}
 StatementView.statementSummary={0} transactions. Total expenses: {1}. Total receipts: {2}
+#The title of the receipt column
+StatementView.receipt=Receipt
+#The title of the debt column
+StatementView.debt=Debt
 
 #-------- Error Reporting part --------
 #Dialog
@@ -700,7 +705,7 @@ ErrorManager.report.dontSend.tootip=Closes the dialog box without sending the er
 ErrorManager.report.send.tootip=Closes the dialog box and sends the error report
 
 GenericCheckBox.rememberDecision=Remember my decision
-GenericCheckBox.rememberDecision.tooltip=<html>Check this box if you want Yapbam to remember your decision and not ask you again.<br>You can change your decision using the Preferences dialog box.</html>
+GenericCheckBox.rememberDecision.tooltip=<html>Check this box if you want Yapbam to remember your decision and not ask you again.<br>You could always change your decision using the Preferences dialog box.</html>
 
 #Preference panel
 ErrorManager.preferences.title=Error reports
@@ -771,6 +776,7 @@ Welcome.showAtStartup.tooltip=Check this box to see this dialog at every Yapbam 
 Welcome.shorcuts.title=Useful shortcuts
 Welcome.sampleData=View a sample data file
 Welcome.sampleData.tooltip=Opens a sample file
+Welcome.sampleData.openFails=<html>An error occurred while reading the sample file !<br>The file ({0}) probably corrupted.</html>
 Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
 Welcome.tutorial.tooltip=Opens the tutorial web page
 Welcome.faq=<html>View the FAQ<BR>(Internet connection needed)</html>
@@ -786,7 +792,7 @@ Welcome.nextTip.tooltip=Displays the next tip
 Welcome.lastTip.tooltip=Displays the last tip
 
 #The tips
-Tip.1=<html>Yapbam appearance can be set in the preferences.<hr style="width:40%">To change it, select <b>{1}</b> in the <b>{0}</b> menu, and go to the <b>{2}</b> tab.</html>
+Tip.1=<html>You can set the Yapbam appearence as a preference.<hr style="width:40%">To change it, select <b>{1}</b> in the <b>{0}</b> menu, and go to the <b>{2}</b> tab.</html>
 Tip.2=<html>You can define alert thresholds for each account.<hr style="width:40%">By default, an alert (icon is shown in the title of the <b>{0}</b> tab) is raised when the balance become negative.<br>You can change this threshold value in the <b>{1}</b> tab.<br>You can also define an alert when the balance exceeds a specified amount.</html>
 Tip.3=<html>Your periodical transactions can be generated automatically.<hr style="width:40%">To do so, you may define some <b>periodical transactions</b> in the <b>{0}</b> tab.<br>An easier way is to select a transaction, and <b>{1}</b> in the context-sensitive menu (right-click on the transaction).</html>
 Tip.4=<html>Think of using the right click!<hr style="width:40%">A right click on a transaction gives you fast access to edition, duplication or deletion.</html>
@@ -796,22 +802,6 @@ Tip.6=<html>You can speed up your entries with keyboard shortcuts.<hr style="wid
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
-
-#-------- Changes in the welcome screen --------
-Welcome.sampleData.openFails=<html>An error occurred reading the sample file\!<br>Maybe this file ({0}) is corrupted</html>
-#-------- End of changes in the welcome screen --------
-
-#-------- Changes in save dialog --------
-saveDialog.dangerousLocation.message=<html><b>Warning !</b><br>You are about to save your account data in the Yapbam installation directory.<br><br><b>Your data will probably be erased</b> during next Yapbam update.<br>We strongly recommend you to save your data elsewhere.<br><br>If you like danger, you can continue, at your own risk.</html>
-#-------- End of changes in save dialog --------
-
-#-------- Fixes to statement view --------
-#These wordings were not localized in the "statement" tab
-#The title of the receipt column
-StatementView.receipt=Receipt
-#The title of the debt column
-StatementView.debt=Debt
-#-------- End of fixes to statement view --------
 
 #-------- AccountsSummary View --------
 AccountsSummary.title=Accounts summary
