--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -8,7 +8,7 @@ MainFrame.CheckedBalance.ToolTip=Current checked balance (unchecked transactions
 MainFrame.CurrentBalance.ToolTip=Current balance (transactions with value date after today are ignored)
 MainFrame.FinalBalance.ToolTip=Final balance (no transactions are ignored)
 MainFrame.Transactions=Transactions
-MainFrame.Transactions.toolTip=Displays the transaction table and tools to edit, duplicate, check ...
+MainFrame.Transactions.toolTip=Displays the transaction table and tools to edit, duplicate, ...
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negative balance: {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Positive balance: {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=Balance summary
@@ -166,6 +166,8 @@ MainMenu.web.yapbam=Visit Yapbam web site
 MainMenu.web.yapbam.tooltip=Opens Yapbam home page (requires an Internet connection)
 
 BalanceHistory.title=Balance history
+BalanceHistory.toolTip=Day-to-day balance
+BalanceHistory.graph.title=Chart
 BalanceHistory.graph.toolTip=Day-to-day balance chart
 BalanceHistory.balance=Balance of {0}: {1}
 BalanceHistory.chart.toolTip=Move the vertical bar down to view the balance of another day
@@ -178,6 +180,9 @@ BalanceHistory.alertTooltipAdd=First alert on {0}
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of balances of the corresponding account (changes the current filter)
+BalanceHistory.transaction.title=Transactions
+BalanceHistory.transaction.tooltip=Day-to-day transactions and balance
+BalanceHistory.transaction.remainingBalance=Remaining balance
 
 AboutDialog.Content=<html>Copyright &copy; 2009-2011 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
 AboutDialog.License.TabName=License
@@ -262,6 +267,8 @@ GenericButton.yes=Yes
 GenericButton.no=No
 GenericButton.ignore=Ignore
 GenericButton.continue=Continue
+#A generic button in the alert dialog to desactivate the alert
+GenericButton.dontAskMeAnyMore=Don't ask me anymore
 
 Transaction.0=S/T
 Transaction.account=Account
@@ -359,10 +366,9 @@ PreferencesDialog.AutoUpdate.toolTip=This tab allows you to configure the search
 
 PreferencesDialog.LookAndFeel.title=Appearance
 PreferencesDialog.LookAndFeel.toolTip=This tab allows you to configure Yapbam's appearance
-#PreferencesDialog.LookAndFeel.java=System-independent appearance
-#PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam use a system-independent appearance
-#PreferencesDialog.LookAndFeel.platform=Default system appearance
-#PreferencesDialog.LookAndFeel.platform.toolTip=Click to have Yapbam use system's default appearance
+#-------- preference sub-panel about general graphic theme -------
+PreferencesDialog.Theme.title=Theme
+PreferencesDialog.Theme.toolTip=This tab allows you to choose Yapbam's graphical theme
 
 PreferencesDialog.Network.title=Network
 PreferencesDialog.Network.toolTip=This tab allows you to set how Yapbam connects to the Internet
@@ -800,9 +806,6 @@ Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes:<hr style="wi
 Tip.6=<html>You can speed up your entries with keyboard shortcuts.<hr style="width:40%">When you edit a date, the <b>UP arrow</b> increases the date by one day, and the <b>DOWN arrow</b> decreases the date by one day.<br>Similarly, for number entries (for example, the number of checks in a checkbook), these arrows increase or decrease the number by one.</html>
 #-------- end of the welcome screen part --------
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-
 #-------- AccountsSummary View --------
 AccountsSummary.title=Accounts summary
 AccountsSummary.tooltip=Summary of all accounts
@@ -810,14 +813,6 @@ AccountsSummary.CheckedBalance=Checked balance
 AccountsSummary.CurrentBalance=Current balance
 AccountsSummary.FinalBalance=Final balance
 #-------- End of AccountsSummaryView --------
-
-#-------- Balance History view --------
-#Introducing a new sub-panel in the balance history panel
-BalanceHistory.toolTip=Day-to-day balance
-BalanceHistory.graph.title=Chart
-BalanceHistory.transaction.title=Transactions
-BalanceHistory.transaction.tooltip=Day-to-day transactions and balance
-BalanceHistory.transaction.remainingBalance=Remaining balance
 
 #-------- New "important news" screen -------
 ImportantNews.title=Important news
@@ -863,9 +858,7 @@ DeleteCheckedTransactionAlert.message=You are about to delete a checked transact
 DeleteTransactionAlert.title=Transaction deletion
 DeleteTransactionAlert.message=You are about to delete a transaction.
 
-#A generic button in the alert dialog to desactivate the alert
-GenericButton.dontAskMeAnyMore=Don't ask me anymore
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
 
-#-------- New preference sub-panel about general graphic theme -------
-PreferencesDialog.Theme.title=Theme
-PreferencesDialog.Theme.toolTip=This tab allows you to choose Yapbam's graphical theme
+
