--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -92,23 +92,28 @@ MainMenu.Transactions.New.ToolTip=Creates a new transaction
 
 MainMenu.Transactions.Duplicate=Duplicate transaction
 MainMenu.Transactions.Duplicate.ToolTip=Duplicates the selected transaction
+MainMenu.Transactions.Duplicate.Mnemonic=D
+MainMenu.Transactions.Duplicate.Accelerator=D
 
 MainMenu.Transactions.Delete=Delete transaction
 MainMenu.Transactions.Delete.Mnemonic=D
-MainMenu.Transactions.Delete.Accelerator=D
+#MainMenu.Transactions.Delete.Accelerator=D
 MainMenu.Transactions.Delete.ToolTip=Deletes the selected transaction
 
 MainMenu.Transactions.Edit=Edit transaction
 MainMenu.Transactions.Edit.Mnemonic=E
 MainMenu.Transactions.Edit.ToolTip=Edits the selected transaction
+MainMenu.Transactions.Edit.Accelerator=E
 
 MainMenu.Transactions.Check=Check transaction
 MainMenu.Transactions.Check.ToolTip=Checks the selected transaction
+MainMenu.Transactions.Check.Mnemonic=C
 MainMenu.Transactions.convertToPeriodical=Converts to periodical transaction
 MainMenu.Transactions.convertToPeriodical.ToolTip=Creates a new periodical transaction based on this transaction type 
+MainMenu.Transactions.convertToPeriodical.Mnemonic=C
 
 MainMenu.Transactions.Periodical=Generate periodical transactions
-MainMenu.Transactions.Periodical.Mnemonic=P;
+MainMenu.Transactions.Periodical.Mnemonic=G;
 MainMenu.Transactions.Periodical.ToolTip=Generates periodical transactions
 
 MainMenuBar.Filter=Filter
