--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -883,4 +883,11 @@ PreferencesDialog.StartState.openedFile=Remember last opened file
 PreferencesDialog.StartState.openFile.tooltip=Check this box to automatically reopen last opened file at startup
 PreferencesDialog.StartState.filter=Remember the filter 
 PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filter between Yapbam launches
+Tip.7=<html>Conservez le filtre d'une éxécution à l'autre de Yapbam.<hr style="width:40%">TODO.</html>
 
+# A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
+# without closing the dialog (the dialog is resetted to its empty state).
+# In order to keep it simple for the newbie, this button only appears when the user makes press the shift key while opening the dialog
+TransactionDialog.next=Next
+TransactionDialog.next.tooltip=Click to validate the transaction and reset the dialog and start editing a new transaction
+Tip.8=<html>Saisissez vos opérations en masse.<hr style="width:40%">Lorsque vous créez une nouvelle opération en maintenant la touche <b>majuscule</b> pressée, un nouveau bouton apparaît.<br>Celui-ci valide l'opération en cours d'édition et réinitialise le dialogue, vous permettant ainsi de gagner du temps quand vous devez saisir de nombreuses opérations.</html>
