--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -893,3 +893,5 @@ TransactionDialog.next.tooltip=Click to validate the transaction and reset the d
 MainMenu.Transactions.NewMultiple=New bulk transactions
 MainMenu.Transactions.NewMultiple.ToolTip=Opens the transaction dialog for creating multiple transactions
 Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog with the <b>shift</b> key pressed, a button <b>'"{0}'"</b> appears.<br>It validates the current transaction and reset the dialog. This allows you to save time when you must enter many transactions.</html>
+
+Transaction.comment=Comment
