--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -894,4 +894,8 @@ MainMenu.Transactions.NewMultiple=New bulk transactions
 MainMenu.Transactions.NewMultiple.ToolTip=Opens the transaction dialog for creating multiple transactions
 Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog with the <b>shift</b> key pressed, a button <b>'"{0}'"</b> appears.<br>It validates the current transaction and reset the dialog. This allows you to save time when you must enter many transactions.</html>
 
+#A new transaction's attribute: a comment
 Transaction.comment=Comment
+#New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
+MainFrame.Transactions.Preferences.commentDisplay=Check this box to display comment in a separate column (Otherwise, the comment will be placed in parentheses after the description)
+MainFrame.Transactions.Preferences.commentDisplay.tooltip=Show transaction's comment in a separate column from description
