--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -896,6 +896,8 @@ Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the
 
 #A new transaction's attribute: a comment
 Transaction.comment=Comment
+#Field tooltip in the "new transaction" dialog
+TransactionDialog.comment.tooltip=TODO.........
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
 MainFrame.Transactions.Preferences.commentDisplay=Check this box to display comment in a separate column (Otherwise, the comment will be placed in parentheses after the description)
 MainFrame.Transactions.Preferences.commentDisplay.tooltip=Show transaction's comment in a separate column from description
