--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -897,7 +897,12 @@ Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the
 #A new transaction's attribute: a comment
 Transaction.comment=Comment
 #Field tooltip in the "new transaction" dialog
-TransactionDialog.comment.tooltip=TODO.........
+TransactionDialog.comment.tooltip=Enter the transaction comment
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
-MainFrame.Transactions.Preferences.commentDisplay=Check this box to display comment in a separate column (Otherwise, the comment will be placed in parentheses after the description)
-MainFrame.Transactions.Preferences.commentDisplay.tooltip=Show transaction's comment in a separate column from description
+MainFrame.Transactions.Preferences.commentDisplay=Show transaction's comment in a separate column from description
+MainFrame.Transactions.Preferences.commentDisplay.tooltip=Check this box to display comment in a separate column (Otherwise, the comment will be placed in parentheses after the description)
+#Tooltips of the comment filter box
+CustomFilterPanel.comment.toolTip=Text to compare with transaction's comment
+CustomFilterPanel.comment.contains.toolTip=Select this if the comment should contain the entered text
+CustomFilterPanel.comment.equals.toolTip=Select this if the comment should be the same as the entered text
+CustomFilterPanel.comment.regularExpression.toolTip=Select this if the comment should satisfy the following regular expression
