--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -883,7 +883,7 @@ PreferencesDialog.StartState.openedFile=Remember last opened file
 PreferencesDialog.StartState.openFile.tooltip=Check this box to automatically reopen last opened file at startup
 PreferencesDialog.StartState.filter=Remember the filter 
 PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filter between Yapbam launches
-Tip.7=<html>Keep the filter between two Yapbam launches.<hr style="width:40%">In the dialogue opened by the menu <b>{0}</b>/<b>{1}</b>, the <b>{2}</b> tab sets what informations are remembered between to Yapbam sessions, in particular, the last filter used.</html>
+Tip.7=<html>Keep the filter between two Yapbam launches.<hr style="width:40%">In the dialog opened by the menu <b>{0}</b>/<b>{1}</b>, the <b>{2}</b> tab sets what informations are remembered between to Yapbam sessions, in particular, the last filter used.</html>
 
 # A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
 # without closing the dialog (the dialog is resetted to its empty state).
@@ -892,7 +892,7 @@ TransactionDialog.next=Next
 TransactionDialog.next.tooltip=Click to validate the transaction and reset the dialog and start editing a new transaction
 MainMenu.Transactions.NewMultiple=New bulk transactions
 MainMenu.Transactions.NewMultiple.ToolTip=Opens the transaction dialog for creating multiple transactions
-Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog with the <b>shift</b> key pressed, a button <b>'"{0}'"</b> appears.<br>It validates the current transaction and reset the dialog. This allows you to save time when you must enter many transactions.</html>
+Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog with the <b>"{0}"</b> menu, a button <b>"{1}"</b> appears in the dialog.<br><br>It validates the current transaction and reset the dialog. This allows you to save time when you must enter many transactions.</html>
 
 #A new transaction's attribute: a comment
 Transaction.comment=Comment
