--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -906,3 +906,6 @@ CustomFilterPanel.comment.toolTip=Text to compare with transaction's comment
 CustomFilterPanel.comment.contains.toolTip=Select this if the comment should contain the entered text
 CustomFilterPanel.comment.equals.toolTip=Select this if the comment should be the same as the entered text
 CustomFilterPanel.comment.regularExpression.toolTip=Select this if the comment should satisfy the following regular expression
+
+#---------------------------------
+TextMatcherFilterPanel.invalidRegularExpression=The regular expression {0} is incorrect
