--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -910,3 +910,4 @@ CustomFilterPanel.comment.regularExpression.toolTip=Select this if the comment s
 #---------------------------------
 TextMatcherFilterPanel.invalidRegularExpression=The regular expression {0} is incorrect
 ExportDialog.columnsChangedMessage=<html>The list of attributes of transactions has changed since the last export.<br>Impossible to automatically restore the column list to export.<br><br>Don't forget to set it in the following dialog.</html>
+MainFrame.ReadLastFilterError=Unable to restore the saved filter. The filter is cleared.
