--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -911,3 +911,4 @@ CustomFilterPanel.comment.regularExpression.toolTip=Select this if the comment s
 TextMatcherFilterPanel.invalidRegularExpression=The regular expression {0} is incorrect
 ExportDialog.columnsChangedMessage=<html>The list of attributes of transactions has changed since the last export.<br>Impossible to automatically restore the column list to export.<br><br>Don't forget to set it in the following dialog.</html>
 MainFrame.ReadLastFilterError=Unable to restore the saved filter. The filter is cleared.
+MainFrame.SaveStateError=<html>An error occurred while saving the state of Yapbam.<br><br>Common causes are: <li>file {0} is writable</li><li>the disk is full</li></ul></html>
