--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -913,3 +913,14 @@ ExportDialog.columnsChangedMessage=<html>The list of attributes of transactions 
 MainFrame.ReadLastFilterError=Unable to restore the saved filter. The filter is cleared.
 MainFrame.SaveStateError=<html>An error occurred while saving the state of Yapbam.<br><br>Common causes are:<ul><li>file {0} is writable</li><li>the disk is full</li></ul></html>
 MainFrame.SavePreferencesError=<html>An error occurred while saving the preferences.<br><br>Common causes are:<ul><li>file {0} is writable</li><li>the disk is full</li></ul></html>
+
+#The balance fields in the transactions tab can now be selected.
+#Click on one of them selects it and makes it the reference. Others fields contain now value relative to this reference.
+#Click again removes the reference and restores the original display 
+#These two wordings are added to the tooltips of balance fields (only the one that applied to the current balance selected/notSelected state) 
+MainFrame.BalancePanel.NotSelected.ToolTip=Click this button to make this amount the reference for other balance fields
+MainFrame.BalancePanel.Selected.ToolTip=Click this button to deselected this reference and make fields display their absolute value
+#This wording is added to the balance tooltip when it displays a relative amount
+MainFrame.BalancePanel.Relative.ToolTip=<b>WARNING</b>: This field contains a value relative to the selected balance 
+#A new tip explaining all this stuff !
+Tip.9=<html>Yapbam can display relative balances summary.<hr style="width:40%">You can select one of the balances shown at the bottom of the <b>{0}</b> tab by clicking on it. The remaining balances are then calculated relative to this reference.</html>
