--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -918,7 +918,7 @@ MainFrame.SavePreferencesError=<html>An error occurred while saving the preferen
 #Click on one of them selects it and makes it the reference. Others fields contain now value relative to this reference.
 #Click again removes the reference and restores the original display 
 #These two wordings are added to the tooltips of balance fields (only the one that applied to the current balance selected/notSelected state) 
-MainFrame.BalancePanel.NotSelected.ToolTip=Click this button to make this amount the reference for other balance fields
+MainFrame.BalancePanel.NotSelected.ToolTip=Click this button to take this amount as the reference for other balance fields
 MainFrame.BalancePanel.Selected.ToolTip=Click this button to deselected this reference and make fields display their absolute value
 #This wording is added to the balance tooltip when it displays a relative amount
 MainFrame.BalancePanel.Relative.ToolTip=<b>WARNING</b>: This field contains a value relative to the selected balance 
