--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -635,7 +635,7 @@ ImportDialog.help.toolTip=Click this to get help on import
 ImportDialog.noAmountSelected=The amount field is not associated with any column of the file
 ImportDialog.noDateSelected=The date field is not associated with any column of the file
 ImportDialog.errorMessage.title=Error during import
-ImportDialog.errorMessagelienNumberColumnHeader=Line number
+ImportDialog.errorMessagelineNumberColumnHeader=Line number
 # When an imported file contains erroneous lines, a report is displayed
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines could not be parsed and will be ignored.</html>
 ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors
@@ -924,3 +924,7 @@ MainFrame.BalancePanel.Selected.ToolTip=Click this button to deselected this ref
 MainFrame.BalancePanel.Relative.ToolTip=<b>WARNING</b>: This field contains a value relative to the selected balance 
 #A new tip explaining all this stuff !
 Tip.9=<html>Yapbam can display relative balances summary.<hr style="width:40%">You can select one of the balances shown at the bottom of the <b>{0}</b> tab by clicking on it. The remaining balances are then calculated relative to this reference.</html>
+
+#--------------------------------
+ImportDialog.error.emptyFile=The imported file is empty
+ImportDialog.error.exception=An error ({0}) occurred while reading the imported file
