--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -743,7 +743,6 @@ PreferencesDialog.AutoUpdate.ifAvailable.autoInstall=Download and install
 
 #This dialog will be displayed when Yapbam need to inform the user that a new version is available
 #There was already a dialog like this one for telling that an update was available, here are the changes to the wordings used in the dialog
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>What would you like to do ?</BODY></HTML>
 MainMenu.CheckUpdate.installNow=Install now
 MainMenu.CheckUpdate.cancel=Do nothing
 
@@ -928,3 +927,5 @@ Tip.9=<html>Yapbam can display relative balances summary.<hr style="width:40%">Y
 #--------------------------------
 ImportDialog.error.emptyFile=The imported file is empty
 ImportDialog.error.exception=An error ({0}) occurred while reading the imported file
+
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Release notes are available here:<BR>{2}<BR><BR>What would you like to do ?</BODY></HTML>
