--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -928,5 +928,5 @@ Tip.9=<html>Yapbam can display relative balances summary.<hr style="width:40%">Y
 ImportDialog.error.emptyFile=The imported file is empty
 ImportDialog.error.exception=An error ({0}) occurred while reading the imported file
 
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Release notes are available here:<BR>{2}<BR><BR>What would you like to do ?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Release notes are available on <b>http://www.yapbam.net</b><BR><BR>What would you like to do ?</BODY></HTML>
 HelpManager.unsupported.message=<HTML>Unable to open a web browser.<br><br>The URL ({0}) has been copied to the clipboard.<br>You can now paste it to your web browser.</HTML> 
