--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -931,3 +931,7 @@ MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Late
 HelpManager.unsupported.message=<HTML>Unable to open a web browser.<br><br>The URL ({0}) has been copied to the clipboard.<br>You can now paste it to your web browser.</HTML> 
 openDialog.fileDoesntExist=The selected file doesn't exists
 openDialog.targetDoesntExist=The target of the selected shortcut doesn't exists
+
+MainMenu.Transactions.Periodical.disabled.tooltip.line1=This element is grayed out because there's no periodical transaction defined
+MainMenu.Transactions.Periodical.disabled.tooltip.line2=Periodical transactions can be defined in "{0}" part of "{1}" panel.
+
