--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -154,7 +154,7 @@ MainMenu.CheckUpdate.Error.title=Unable to check for updates
 MainMenu.CheckUpdate.FirstRun.title=Check for update
 MainMenu.CheckUpdate.FirstRun.message=<HTML>Welcome to Yapbam \!<BR><BR>Yapbam can connect to the Internet to check whether a new version is available.<BR>Would you like Yapbam to make this check at startup?<BR><BR>This setting can be modified in the Preferences dialog (in the File menu)</html>
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Error in communication with the update server: <B>Http Error {0,number}</B><BR><BR>This server is probably temporarily down.<BR><BR>Please retry later. If the problem persists, go to <a href="{1}">{1}</a></BODY></HTML>
-MainMenu.CheckUpdate.IOError=<HTML><BODY>Error in communication with the update server: <B>{0}</B><BR><BR>Please check your Internet connection or Yapbam's Internet connection settings.<BR><BR>If the problem persists, please go to <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Error in communication with the update server: <B>{0}</B><BR><BR>Please check your Internet connection or Yapbam''s Internet connection settings.<BR><BR>If the problem persists, please go to <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.Header=<HTML><BODY>A new version of <B>Yapbam</B> is available.</BODY></HTML>
 MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>You can download the latest from <a href="{2}">{2}</a></BODY></HTML>
 MainMenu.CheckUpdate.NoUpdate.title=No update available
@@ -350,7 +350,7 @@ PreferencesDialog.Localization.countryList.tooltip=Select a country from this li
 PreferencesDialog.Localization.customCountry=Custom
 PreferencesDialog.Localization.customCountry.tooTip=Click on this or select the country from the following list to choose a country different from your system's default country
 PreferencesDialog.Localization.defaultCountry=Default ({0})
-PreferencesDialog.Localization.defaultCountry.toolTip=Select this to use your system's default country ({0})
+PreferencesDialog.Localization.defaultCountry.toolTip=Select this to use your system''s default country ({0})
 PreferencesDialog.Localization.defaultLanguage=<html>System's language<br>(English if this language is not available in Yapbam)</html>
 PreferencesDialog.Localization.defaultLanguage.toolTip=Choose this to use your system's default language (or English if this language not available in Yapbam)
 PreferencesDialog.Localization.language=Language
@@ -846,7 +846,7 @@ TransactionEditingPreferencesPanel.format.customized.invalidFormat=Invalid forma
 TransactionEditingPreferencesPanel.format.customized.sample=(example: {0})
 #translators note: be aware in the following line that the format codes don't depend on the language (yyyy is always yyyy, even in french where it could have been aaaa).
 TransactionEditingPreferencesPanel.format.customizedField.tooltip=<html>Enter the customized format in this field.<ul><li>yyyy: year on 4 digits</li><li>yy: year on 2 digits</li><li>MM: month on two digits</li><li>MMM: short month name (example Jul.)</li><li>MMMM: full month name</li><li>w: Week in year</li><li>W: Week in month</li></ul></html>
-TransactionEditingPreferencesPanel.okDisabledCauseFormat=The date format entered in the '"{0}'" tab is wrong
+TransactionEditingPreferencesPanel.okDisabledCauseFormat=The date format entered in the "{0}" tab is wrong
 TransactionEditingPreferencesPanel.duplicateTransaction.keepOriginalDate=Set the date field to the original date
 TransactionEditingPreferencesPanel.duplicateTransaction.keepOriginalDate.tooltip=Select this to keep the original date in the new transaction
 TransactionEditingPreferencesPanel.duplicateTransaction.setDateToCurrent=Set the date field to the current date
