--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -60,6 +60,7 @@ MainMenu.Export.ToolTip=Exports data to a text file
 MainMenuBar.Print=Print...
 MainMenuBar.Print.ToolTip=Start printing
 MainMenuBar.Print.Accelerator=P
+MainMenu.Print.Mnemonic=R
 MainMenuBar.Print.Error.Message=<html>The following error occurred during printing:<br>{0}</html>
 MainMenuBar.Print.Error.Title=Error while printing
 
