--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -710,7 +710,7 @@ StatementView.debt=Debt
 
 #-------- Error Reporting part --------
 #Dialog
-ErrorManager.sendReport.message=<html><h1>Sorry, an error occurred.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this software.
+ErrorManager.sendReport.message=<html><h1>Sorry, an error occurred.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this software.</html>
 ErrorManager.report.dontSend.tootip=Closes the dialog box without sending the error report
 ErrorManager.report.send.tootip=Closes the dialog box and sends the error report
 
