--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -935,3 +935,5 @@ openDialog.targetDoesntExist=The target of the selected shortcut doesn't exists
 MainMenu.Transactions.Periodical.disabled.tooltip.line1=This element is grayed out because there's no periodical transaction defined
 MainMenu.Transactions.Periodical.disabled.tooltip.line2=Periodical transactions can be defined in "{0}" part of "{1}" panel.
 
+#---------------------------------
+Backup.helpButton.toolTip=Click this to get help on regular expressions
